@@ -659,8 +659,9 @@ void SDLHardwareRenderDevice::setFullscreen(bool enable_fullscreen) {
 	if (!destructive_fullscreen) {
 		if (enable_fullscreen) {
 			SDL_SetWindowFullscreen(window, SDL_WINDOW_FULLSCREEN_DESKTOP);
+			fullscreen = true;
 		}
-		else {
+		else if (fullscreen) {
 			SDL_SetWindowFullscreen(window, 0);
 
 			// restore window to the default size
@@ -669,6 +670,7 @@ void SDLHardwareRenderDevice::setFullscreen(bool enable_fullscreen) {
 			windowResize();
 			// setting minimum size might move the window, so set position again
 			SDL_SetWindowPosition(window, SDL_WINDOWPOS_CENTERED, SDL_WINDOWPOS_CENTERED);
+			fullscreen = false;
 		}
 		windowResize();
 	}
